# Quackshot

./: .gitignore  CMakeLists.txt  README.md  main.cpp
engine/: camera.h  config.h  frame.h  graphics.h  graphics_context.h  platform.h  renderer.h  sound_engine.h  sprite_cache.h
engine/shader/: final_pass.frag  final_pass.vert  screen_pass.frag  screen_pass.vert  world_pass.frag  world_pass.vert
engine/src/: frame.cpp  graphics.cpp  graphics_context.cpp  platform.cpp  renderer.cpp  sound_engine.cpp  sprite_cache.cpp
game/: cursor.h  duck_manager.h  gameplay_state.h  scenery_manager.h  shooting_state.h  sim.h  state.h  transition_state.h  ui_manager.h
game/src/: duck_manager.cpp  gameplay_state.cpp  scenery_manager.cpp  shooting_state.cpp  sim.cpp  transition_state.cpp  ui_manager.cpp
utility/: common.h  lerp.h
